# Valen-Labs

./: .gitignore
backend/: .env.example  AI_SYSTEM_INTEGRATION_REPORT.md  create_tables.py  pyproject.toml  requirements.txt  simple_ai_test.py  start_demo.py  startup_message.py  test_ai_system_integration.py  test_conservative_parsing.py  test_dynamic_job_fit.py  test_expected_answers.py  test_expected_answers_gemini.py  test_experience_default.py  test_experience_disabled.py  test_fallback_demo.py  test_final_fix.py  test_gemini_fallback.py  test_gemini_simple.py  test_integration.py  test_interview.py  test_interview_with_expected_answers.py  test_job_fit_integration.py  test_resume_parsing.py  test_server.py  verification_report.json  verify_complete_fix.py  verify_fix.py
backend/app/: config.py  constants.py  database.py  main.py
backend/app/ai_engines/: cloud_llm_engine.py  engine_router.py  gemini_engine.py  intelligence_engine.py  ollama_engine.py
backend/app/middleware/: cors.py
backend/app/models/: __init__.py  interview.py  report.py  response.py  resume.py
backend/app/routes/: __init__.py  ai_engine_routes.py  aptitude_routes.py  demo_routes.py  feedback_routes.py  health_check.py  interview_routes.py  job_fit_routes.py  report_routes.py  resume_builder_routes.py  resume_routes.py  supabase_routes.py
backend/app/schemas/: __init__.py  analysis_schema.py  interview_schema.py  resume_builder.py
backend/app/services/: firebase_admin.py  interview_service.py  mongodb_service.py  (+10 more)
backend/latex/: resumeTemplate.tex
backend/supabase/: README.md
(+149 files in other folders)
